--- a/templates/home.html
+++ b/templates/home.html
@@ -169,7 +169,7 @@
         </button>
     </div>
     <br>
-    <h1 style="text-align: center; font-weight: bolder;">Weather Prediction</h1>
+    <h1 style="text-align: center; font-weight: bolder;">Cloud Conditions Prediction</h1>
     <br>
     <div id="predict">
         <div class="container marketing">
