--- a/templates/predict.html
+++ b/templates/predict.html
@@ -107,7 +107,7 @@
     </nav>
     <div style="background-color:rgb(0,45,66);">
         <h1 style="text-align: center; color: white;">
-            Weather
+            Cloud Conditions Prediction
         </h1>
     </div>
     <br>
@@ -115,7 +115,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/" id="links">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Predict Weather</li>
+                <li class="breadcrumb-item active" aria-current="page">Predict Cloud Conditions</li>
             </ol>
         </nav>
     </div>
