--- a/templates/predictresult.html
+++ b/templates/predictresult.html
@@ -88,14 +88,14 @@
         </div>
     </nav>
     <div style="background-color: rgb(0,45,66); text-align: center;color: white;">
-        <h1>Weather</h1>
+        <h1>Cloud Conditions Prediction</h1>
     </div>
     <br>
     <div class="container" id='breadcrumb'>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/" id="links">Home</a></li>
-                <li class="breadcrumb-item"><a href="/Predict" id="links">Weather</a></li>
+                <li class="breadcrumb-item"><a href="/Predict" id="links">Cloud Conditions</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Predicted on Entered Data</li>
             </ol>
         </nav>
