--- a/templates/home.html
+++ b/templates/home.html
@@ -224,7 +224,7 @@
         <div class="row">
             <div class="col">
                 <center>
-                    <h2>Predict Weather Condition Here: </h2>
+                    <h2>Predict Cloud Conditions Here: </h2>
                 </center>
             </div>
             <div class="col">
