--- a/templates/home.html
+++ b/templates/home.html
@@ -317,7 +317,7 @@
                                             id="link">LinkedIn</a>
                                     </li>
                                     <li>
-                                        <a class="white" href="https://github.com/vish-68/" id="link">Github</a>
+                                        <a class="white" href="https://github.com/vish-68/Cloud-Conditions" id="link">Github</a>
                                     </li>
                                     <li>
                                         <a class="white" href="https://www.kaggle.com/vishalupare" id="link">Kaggle</a>
